k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: logistics-api-service
spec:
  selector:
    app: logistics-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2000
  type: ClusterIP
