k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logistics-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "api.orderslogistics.co.uk"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: logistics-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.orderslogistics.co.uk
      secretName: logistics-api-cert
